# FinTracker

./: .gitignore  CLAUDE.md  README.md  plot.md
.claude/: settings.json
backend/: .env.example  esbuild.config.js  lambda_handler.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  dashboard.py  files.py  transactions.py
backend/app/domain/: entities.py  enums.py  exceptions.py
backend/app/infrastructure/dynamodb/: client.py  file_repo.py  transaction_repo.py  user_repo.py
backend/app/infrastructure/llm/: base.py  factory.py  grok_provider.py  openai_provider.py
backend/app/infrastructure/s3/: storage.py
backend/app/services/: auth_service.py  categorization_service.py  dashboard_service.py  extraction_service.py  file_service.py  parser_service.py  transaction_service.py
backend/src/: app.js  config.js  lambda.js  local.js
backend/src/infrastructure/: dynamodb.js  llm.js  s3.js
backend/src/middleware/: admin.js  auth.js
backend/src/routes/: auth.js  categories.js  dashboard.js  files.js  merchants.js  transactions.js
backend/src/services/: authService.js  categoryService.js  dashboardService.js  extractionService.js  fileService.js  merchantService.js  parserService.js
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_auth_service.py  test_categorization_service.py  test_extraction_service.py  test_parser_service.py
frontend/: index.html  package-lock.json  (+1 more)
(+46 files in other folders)
